# cookiecutter-pypackage

./: .gitignore  .travis.yml  CLAUDE.md  Makefile  README.md  cookiecutter.json
.github/workflows/: test.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_template.py
tests/examples/: README.md
tests/examples/default/: CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README.md  setup.cfg  setup.py  tox.ini
tests/examples/default/.github/workflows/: docs.yml  test.yml
tests/examples/default/docs/sources/: conf.py  index.rst
tests/examples/default/python_boilerplate/: .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  codecov.yml  pyproject.toml  setup.py
tests/examples/default/python_boilerplate/.github/workflows/: docs.yml  test.yml
tests/examples/default/python_boilerplate/.travis/: doctr_build.sh
tests/examples/default/python_boilerplate/docs/: conf.py  index.rst
tests/examples/default/python_boilerplate/docs/sources/: conf.py  conftest.py  index.md
tests/examples/default/python_boilerplate/docs/sources/_static/: mycss.css
tests/examples/default/python_boilerplate/docs/sources/_templates/: layout.html
tests/examples/default/python_boilerplate/scripts/: README.md  check_changelog.py  release.py
tests/examples/default/python_boilerplate/src/: conftest.py
tests/examples/default/python_boilerplate/src/python_boilerplate/: __init__.py
tests/examples/default/python_boilerplate/tests/: test_python_boilerplate.py
tests/examples/default/scripts/: bootstrap.py  clean.py  release.py
tests/examples/default/src/python_boilerplate/: __init__.py
tests/examples/minimal/python_boilerplate/: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
tests/examples/minimal/python_boilerplate/.github/workflows/: test.yml
tests/examples/minimal/python_boilerplate/scripts/: README.md  clean.py  pre-commit.py
tests/examples/minimal/python_boilerplate/src/python_boilerplate/: __init__.py
tests/examples/minimal/python_boilerplate/tests/: test_python_boilerplate.py
tests/examples/notebooks/python_boilerplate/: .travis.yml  CONTRIBUTING.rst  HISTORY.rst  Makefile  setup.cfg  setup.py  tox.ini
tests/examples/notebooks/python_boilerplate/.travis/: doctr_build.sh
tests/examples/notebooks/python_boilerplate/binder/: environment.yml
tests/examples/notebooks/python_boilerplate/docs/: conf.py  conftest.py  index.rst  tutorial.ipynb
tests/examples/notebooks/python_boilerplate/scripts/: clean.py
tests/examples/rtd/python_boilerplate/: .appveyor.yml  .readthedocs.yml  .travis.yml  README.rst  setup.py  tox.ini
tests/examples/rtd/python_boilerplate/docs/: conf.py  conftest.py  index.rst
tests/examples/rtd/python_boilerplate/src/: conftest.py
tests/mainpkg/: __init__.py  mod.py
tests/mainpkg/subpkg/: __init__.py  submod.py
{{cookiecutter.project_slug}}/: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  codecov.yml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/.github/: dependabot.yml
{{cookiecutter.project_slug}}/.github/workflows/: docs.yml  test.yml
{{cookiecutter.project_slug}}/.travis/: doctr_build.sh
{{cookiecutter.project_slug}}/binder/: environment.yml
{{cookiecutter.project_slug}}/docs/: Makefile  conf.py  conftest.py  index.rst  make.bat  rtd_environment.yml  tutorial.ipynb
{{cookiecutter.project_slug}}/docs/_extensions/: dollarmath.py
{{cookiecutter.project_slug}}/docs/_templates/: breadcrumbs.html  layout.html  module.rst  package.rst
{{cookiecutter.project_slug}}/docs/sources/: api.rst  conf.py  conftest.py  history.rst  index.md  index.rst  readme.md  readme.rst
{{cookiecutter.project_slug}}/docs/sources/_templates/: layout.html  module.rst  package.rst
{{cookiecutter.project_slug}}/scripts/: README.md  clean.py  install-pre-commit.py  release.py
{{cookiecutter.project_slug}}/src/: conftest.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
