[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
exclude = docs
max-line-length = {{ cookiecutter.linelength }}
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
    # don't care about "ambiguous variable names"
    E741,
    # when I use lambdas, I know what I'm doing
    E731,

[tool:pytest]
collect_ignore = ['setup.py']

[rstcheck]
ignore_directives=doctest
ignore_messages=(Hyperlink target "[^"]+" is not referenced\.$)
ignore_roles=cite

{% if cookiecutter.use_isort == 'y' %}
[isort]
known_first_party = {{ cookiecutter.project_slug }}
force_single_line = False
lines_after_imports = 2
line_length = {{ cookiecutter.linelength }}
use_parentheses = True
multi_line_output = 3
include_trailing_comma = True
skip = src/{{ cookiecutter.project_slug }}/__init__.py
{%- endif %}
